--- a/index.html
+++ b/index.html
@@ -157,6 +157,17 @@
       cursor: pointer;
     }
 
+    .upload button{
+      background-color: #d6336c;
+      color: white;
+      width: 200px;
+      padding: 10px;
+      margin: 10px auto;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
     .wishes-container {
       position: relative;
       width: 90%;
@@ -252,6 +263,13 @@
       <div class="wishes-carousel"></div>
     </div>
   </section>
+
+   <!-- Upload Button -->
+   <div class="upload">
+    <button onclick="window.location.href='https://www.dropbox.com/request/k41U54vNuQ8IW1aeWI5s'">
+      Upload Your Event Photos
+    </button>
+  </div>
 
   <footer>
     <p>&copy; 2025 Wedding of Annie & Ayo | TwoAsOneLove</p>
